--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @event['name'] %>
-<h2><%= @event['group']['name'] %>
+<h1><%= @event[:name] %>
+<h2><%= @event[:group][:name] %>
 <p>People present:
-<p><%= @event['yes_rsvp_count'] %>
+<p><%= @event[:yes_rsvp_count] %>
 <p>@
-<p><%= @event['venue']['name'] %>
+<p><%= @event[:venue][:name] %>
 
-<%= link_to 'random', "/events/#{@event['group']['urlname']}/#{@event['id']}/random" %>
+<%= link_to :random, "/events/#{@event[:group][:urlname]}/#{@event[:id]}/random" %>
