Style the events page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,7 @@
 @import "base/media-queries";
 
 @import "landing-page";
+@import "events";
 
 @import "components/button";
+@import "components/event";
