--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -2,4 +2,11 @@ body {
   font-family: $default-font;
   font-size: $default-font-size;
   font-weight: $normal-weight;
+  background-image: linear-gradient(to left, $san-juan, $east-bay);
+  color: $mercury;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
