--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Events</h1>
-<% @events.each do |event| %>
-  <br/>
-  <h2><%=  event[:name] %>
-  <h3><%=  event[:group][:name] %>
-  <%= link_to 'select', "events/#{event[:group][:urlname]}/#{event[:id]}" %>
-<% end %>
+<div class="events">
+  <h1 class="events__title">Events</h1>
+
+  <ul class="events__list">
+    <%= render partial: "event", collection: @events %>
+  </ul>
+</div>
